gitops/platform/bup-policies-pro/base/apps/appprueba2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appprueba2
  namespace: bup-policies-pro
  labels:
    app.kubernetes.io/name: appprueba2
    app.kubernetes.io/part-of: bup-policies-pro
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: appprueba2
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
